Avancement sur la partie JPA + début cablage REST.
