# rest-application/src/main/java/info/san/hexa/rest/pizza/mappers/PizzaDtoMapper.java
@@ -1,7 +1,8 @@
 package info.san.hexa.rest.pizza.mappers;
 
 import info.san.hexa.domain.core.model.pizza.Pizza;
-import info.san.rest.api.model.PizzaDTO;
+import info.san.hexa.rest.api.model.NouvellePizzaDTO;
+import info.san.hexa.rest.api.model.PizzaDTO;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.ValueMapping;
@@ -10,10 +11,9 @@ import org.mapstruct.ValueMappings;
 import java.util.List;
 
 @Mapper(componentModel = "spring",
-        uses = { IngredientMapper.class })
-public interface PizzaMapper {
+        uses = { IngredientDtoMapper.class })
+public interface PizzaDtoMapper {
 
-    @Mapping(target = "prix", source = "prix")
     @Mapping(target = "id", source = "id")
     @Mapping(target = "taille", ignore = true)
     @Mapping(target = "ingredients", source = "ingredients")
@@ -24,6 +24,18 @@ public interface PizzaMapper {
     @Mapping(target = "calzone", ignore = true)
     Pizza mapToDomain(PizzaDTO dto);
 
+    @Mapping(target = "calzone", ignore = true)
+    @Mapping(target = "id", ignore = true)
+    Pizza mapToDomain(NouvellePizzaDTO dto);
+
+    @ValueMappings(value = {
+            @ValueMapping(target = "GRANDE", source = "LARGE"),
+            @ValueMapping(target = "MOYENNE", source = "MEDIUM"),
+            @ValueMapping(target = "PETITE", source = "ENFANT"),
+            @ValueMapping(target = "TRES_GRANDE", source = "TRES_GROS_MANGEUR")
+    })
+    Pizza.Taille map(NouvellePizzaDTO.TailleEnum taille);
+
     @ValueMappings(value = {
             @ValueMapping(target = "GRANDE", source = "LARGE"),
             @ValueMapping(target = "MOYENNE", source = "MEDIUM"),
@@ -32,11 +44,11 @@ public interface PizzaMapper {
     })
     Pizza.Taille map(PizzaDTO.TailleEnum taille);
 
-    @ValueMappings(value = {
+    /*@ValueMappings(value = {
             @ValueMapping(target = "LARGE", source = "GRANDE"),
             @ValueMapping(target = "MEDIUM", source = "MOYENNE"),
             @ValueMapping(target = "ENFANT", source = "PETITE"),
             @ValueMapping(target = "TRES_GROS_MANGEUR", source = "TRES_GRANDE")
     })
-    PizzaDTO.TailleEnum map(Pizza.Taille taille);
+    PizzaDTO.TailleEnum map(Pizza.Taille taille);*/
 }
